@@ -4,6 +4,7 @@ Changes
 1.2.3 (TBD)
 -----------
 
+- Use numpy.isclose instead of equals when merging float data (fixes #2163).
 - The restriction on resampling methods available to overviews has been made
   more clear with the addition of an OverviewResampling enum (#2157).
 - Fix a regression introduced in 1.2.2: from_bounds() can again return Windows
